--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "soa"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+
 [dependencies]
-quote = "1.0.33"
-syn = "2.0.38"
+derive-macro = { path = "derive-macro" }
