--- a/soapy-derive/Cargo.toml
+++ b/soapy-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "derive-macro"
+name = "soapy-derive"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,6 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0.69"
-quote = "1.0.33"
-syn = "2.0.38"
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = "2.0"
