--- a/soa-rs-testing/Cargo.toml
+++ b/soa-rs-testing/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "soapy-testing"
+name = "soa-rs-testing"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-soapy = { version = "0.2.2", path = ".." }
+soa-rs = { version = "0.3.0", path = ".." }
 criterion = "0.5.1"
 rand = "0.8.5"
 
