--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,13 @@ debug = true
 [workspace]
 members = ["soa-rs-derive", "soa-rs-testing"]
 
-[dependencies]
-soa-rs-derive = { path = "soa-rs-derive", version = "0.4.0" }
+[dependencies.soa-rs-derive]
+version = "0.4.0"
+path = "soa-rs-derive"
+
+[dependencies.serde]
+version = "1.0.199"
+optional = true
+
+[features]
+serde = ["dep:serde"]
