--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "soa-rs"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 license = "MIT"
 description = "A Vec-like structure-of-arrays container"
@@ -15,5 +15,14 @@ debug = true
 [workspace]
 members = ["soa-rs-derive", "soa-rs-testing"]
 
-[dependencies]
-soa-rs-derive = { path = "soa-rs-derive", version = "0.4.0" }
+[dependencies.soa-rs-derive]
+version = "0.4.0"
+path = "soa-rs-derive"
+
+[dependencies.serde]
+version = "1.0.199"
+optional = true
+
+[features]
+default = []
+serde = ["dep:serde"]
