--- a/soa-rs-testing/Cargo.toml
+++ b/soa-rs-testing/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.4.0"
 edition = "2021"
 
 [dependencies]
-soa-rs = { version = "0.4.0", path = ".." }
 criterion = "0.5.1"
 rand = "0.8.5"
+serde = "1.0.199"
+serde_json = "1.0.116"
+
+[dependencies.soa-rs]
+version = "0.5.0"
+path = ".."
+features = ["serde"]
 
 [[bench]]
 name = "benchmark"
