Depend on no-std Serde too

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ path = "soa-rs-derive"
 [dependencies.serde]
 version = "1.0.199"
 optional = true
+default-features = false
 
 [features]
 default = []
